--- a/LCTMoodle/Views/BangDiem/Tao.cshtml
+++ b/LCTMoodle/Views/BangDiem/Tao.cshtml
@@ -54,7 +54,7 @@
                         }
                     }
                 </section>
-                <form id="tao_cot_diem_form" class="lct-form tao-cot-diem-form tfoot">
+                <form id="tao_cot_diem_form" class="lct-form tao-cot-diem-form tfoot" data-an-rang-buoc>
                     <section class="tr">
                         <section class="td">
                             <input type="hidden" name="KhoaHoc" value="@khoaHoc.ma" />
