--- a/LCTMoodle/Views/BinhLuan/_Khung.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Khung.cshtml
@@ -16,7 +16,7 @@
         </ul>
     </section>
     <section class="khung-form">
-        <form data-doi-tuong="binh-luan-form" class="lct-form">
+        <form data-doi-tuong="binh-luan-form" class="lct-form" data-an-rang-buoc>
             <input name="LoaiDoiTuong" value="@ViewData["LoaiDoiTuong"]" type="hidden" />
             <input name="MaDoiTuong" value="@ViewData["MaDoiTuong"]" type="hidden" />
             <ul style="flex-wrap: nowrap; padding: 0; margin: 0;">
