--- a/LCTMoodle/Views/KhoaHoc/Tao.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Tao.cshtml
@@ -50,7 +50,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-validate="bat-buoc" data-input-type="chu-de" name="ChuDe" placeholder="Khóa học của bạn thuộc chủ đề nào?" />
+                            <input data-validate="bat-buoc" data-input-type="chu-de" name="MaChuDe" placeholder="Khóa học của bạn thuộc chủ đề nào?" />
                         </article>
                     </section>
                 </li>
@@ -62,7 +62,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-validate="bat-buoc" type="file" name="HinhDaiDien" />
+                            <input data-validate="bat-buoc" type="file" name="MaHinhDaiDien" />
                         </article>
                     </section>
                 </li>
@@ -74,7 +74,9 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-validate="bat-buoc" data-input-type="goi-y" data-url="/NguoiDung/_GoiY_QuanLyKhoaHoc" name="QuanLy" placeholder="Ai là người quản lý khóa học này?" />
+                            <input data-validate="bat-buoc" data-input-type="goi-y" data-url="/NguoiDung/_GoiY_QuanLyKhoaHoc" name="MaNguoiQuanLy[]" placeholder="Ai là người quản lý khóa học này?" />
+                            <input data-validate="bat-buoc" data-input-type="goi-y" data-url="/NguoiDung/_GoiY_QuanLyKhoaHoc" name="MaNguoiQuanLy[]" placeholder="Ai là người quản lý khóa học này?" />
+                            <input data-validate="bat-buoc" data-input-type="goi-y" data-url="/NguoiDung/_GoiY_QuanLyKhoaHoc" name="MaNguoiQuanLy[]" placeholder="Ai là người quản lý khóa học này?" />
                         </article>
                     </section>
                 </li>
@@ -98,7 +100,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-validate="bat-buoc" data-input-type="ngay-gio" name="ThoiDiemHetHan" data-thoi-gian-placeholder="Giờ" data-lich-placeholder="Ngày" />
+                            <input data-validate="bat-buoc" data-input-type="ngay-gio" name="ThoiDiemHetHan" data-gio-placeholder="Giờ" data-ngay-placeholder="Ngày" />
                         </article>
                     </section>
                 </li>
@@ -123,7 +125,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-validate="bat-buoc" data-input-type="ngay-gio" name="HanDangKy" data-thoi-gian-placeholder="Giờ" data-lich-placeholder="Ngày" />
+                            <input data-validate="bat-buoc" data-input-type="ngay-gio" name="HanDangKy" data-gio-placeholder="Giờ" data-ngay-placeholder="Ngày" />
                         </article>
                     </section>
                 </li>
