--- a/LCTMoodle/Views/BaiTapNop/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiTapNop/_Khung.cshtml
@@ -42,7 +42,7 @@
         </a>
     }
 </section>
-<form data-doi-tuong="nop-bai-form" class="lct-form khung-nop">
+<form data-doi-tuong="nop-bai-form" class="lct-form khung-nop" data-an-rang-buoc>
     <input type="hidden" name="MaBaiVietBaiTap" value="@ViewData["MaBaiVietBaiTap"]" />
     <ul style="flex-wrap: nowrap; padding: 5px 10px 10px;">
         <li style="margin: 0; min-width: 32px; max-width: 32px;">
@@ -72,7 +72,7 @@
         {
             <li class="nut">
                 <button style="padding: 0; margin: 0; width: 100%; height: 32px;" class="chap-nhan" type="submit">Nộp</button>
-            </li>   
+            </li>
         }
     </ul>
 </form>
