--- a/LCTMoodle/Views/KhoaHoc/_Item.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/_Item.cshtml
@@ -1,8 +1,8 @@
-﻿
+﻿@model DTOLayer.KhoaHocDTO
 
 <li class="item">
     <section class="hinh-dai-dien">
-        <img src="/LayTapTin/KhoaHoc_HinhDaiDien/@Model.hinhDaiDien.ma" />
+        <img src="@(@Model.hinhDaiDien != null ? "/LayTapTin/KhoaHoc_HinhDaiDien/" + Model.hinhDaiDien.ma : "#")" />
     </section>
     <a href="/KhoaHoc/@Model.ma" class="ten">
         <h1>@Model.ten</h1>
