--- a/LCTMoodle/Content/styles/BangDiem/Tao.css
+++ b/LCTMoodle/Content/styles/BangDiem/Tao.css
@@ -3,28 +3,29 @@
     margin-bottom: 38px;
 }
 
-.khung-cot-diem .td:nth-child(1),
-.khung-cot-diem .th:nth-child(1) {
-    width: 150px;
-}
-
-.khung-cot-diem .td:nth-child(2),
-.khung-cot-diem .th:nth-child(2) {
-    width: 40px;
-}
-
-.khung-cot-diem .td:nth-child(3),
-.khung-cot-diem .th:nth-child(3) {
+.khung-cot-diem .td:nth-child(1) {
     width: auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-.khung-cot-diem .td:nth-child(4),
-.khung-cot-diem .th:nth-child(5) {
-    width: 100px;
+.khung-cot-diem .td:nth-child(2) {
+    width: 35%;
 }
 
-.khung-cot-diem .td:nth-child(2),
+.khung-cot-diem .td:nth-child(3) {
+    min-width: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+}
+
 .khung-cot-diem .td:nth-child(4) {
+    width: 65%;
+}
+
+.khung-cot-diem .td:nth-child(5) {
+    min-width: 90px;
     text-align: center;
 }
 
