--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -50,6 +50,16 @@
                     </li>
                     <li>
                         <section class="tieu-de">
+                            <label>(*) Mật khẩu cấp 2:</label>
+                        </section>
+                        <section class="noi-dung">
+                            <article class="input">
+                                <input type="password" id="MatKhauCap2" name="MatKhauCap2" data-validate="bat-buoc" />
+                            </article>
+                        </section>
+                    </li>
+                    <li>
+                        <section class="tieu-de">
                             <label>(*) Email:</label>
                         </section>
                         <section class="noi-dung">
