--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -55,6 +55,10 @@
     chucNang.Add("href='/KhoaHoc/DanhSachThanhVien/" + Model.ma + "'");
     chucNang.Add("Quản lý quyền");
     chucNang.Add("href='/QuanlyQuyen/KH/" + Model.ma + "'");
+    chucNang.Add("Chương trình khóa học");
+    chucNang.Add("href='/KhoaHoc/ChuongTrinh/" + Model.ma + "'");
+    chucNang.Add("Bảng điểm khóa học");
+    chucNang.Add("href='/KhoaHoc/Tao-BangDiem/" + Model.ma + "'");
 
     ViewData["ChucNang"] = chucNang;
 }
