--- a/LCTMoodle/Content/styles/NguoiDung/Index.css
+++ b/LCTMoodle/Content/styles/NguoiDung/Index.css
@@ -78,3 +78,18 @@
                 color: #08c;
             }
 /*#endregion */
+
+/*#region Kích hoạt tài khoản */
+
+.ten-tai-khoan-kich-hoat {
+    line-height: 30px;
+    font-weight:bold;    
+}
+
+/*#endregion */
+
+/*#region Đổi mật khẩu */
+
+
+
+/*#endregion */
