--- a/LCTMoodle/Views/HoiDap/Index.cshtml
+++ b/LCTMoodle/Views/HoiDap/Index.cshtml
@@ -10,7 +10,7 @@
 
     ViewData["ChucNang"] = new List<string>()
     {
-        "Tạo câu hỏi", "href='/HoiDap/TaoCauHoi'"
+        "Tạo câu hỏi", "href='/HoiDap/ThemCauHoi'"
     };
 }
 
