--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -65,7 +65,7 @@
                                 }
                                 else
                                 {
-                                    <div class="hinh-dai-dien"><i></i></div>
+                                    <img src="/HinhDaiDienMacDinh.png/NguoiDung" />    
                                 }
                                 <span>@nguoiDung.tenTaiKhoan</span>
                             </a>
@@ -144,6 +144,10 @@
                                         @if (nguoiDung.hinhDaiDien != null)
                                         {
                                             <img src="/LayTapTin/NguoiDung_HinhDaiDien/@nguoiDung.hinhDaiDien.ma" />
+                                        }
+                                        else
+                                        {
+                                            <img src="/HinhDaiDienMacDinh.png/NguoiDung" />
                                         }
                                     </div>
                                     <div class="thong-tin-nguoi-dung">
