--- a/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
@@ -53,7 +53,7 @@
                             <label>&nbsp;</label>
                         </section>
                         <section class="noi-dung">                            
-                                <a href="#">Quên mật khẩu?</a>                            
+                                <a href="/NguoiDung/QuenMatKhau/">Quên mật khẩu?</a>                            
                         </section>
                     </li>                    
                 </ul>
