--- a/LCTMoodle/Views/NguoiDung/Xem.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Xem.cshtml
@@ -10,15 +10,19 @@
         chucNang.Add("Cập nhật thông tin cá nhân");
         chucNang.Add("href='/NguoiDung/Sua/" + Model.ma + "'");
 
+        chucNang.Add("Đổi mật khẩu");
+        chucNang.Add("href='/NguoiDung/DoiMatKhau/'");
+
         ViewData["ChucNang"] = chucNang;
     }
     
 }
 @section Styles {
     <link rel="stylesheet" href="/Index.css/NguoiDung/" />
+    <link rel="stylesheet" href="/Xem.css/NguoiDung/" />
 }
 @section Scripts {
-    
+    <script src="/Xem.js/NguoiDung/"></script>
 }
 
 <section class="hop hop-2-vien">    
@@ -72,4 +76,44 @@
             <div class="noi-dung" data-change="SoDienThoai">@Model.soDienThoai</div>
         </div>
     </section>
+</section>
+
+
+<section class="hop hop-1-vien">
+    <section class="tieu-de">Thông tin khóa học</section>
+    <section id="khung_chon_hien_thi" class="khung-chon-hien-thi">
+        <ul>
+            <li class="khung">
+                <a data-chuc-nang="hien-thi" data-value="khung">
+                    <i></i>
+                    <span>Tổng quát</span>
+                </a>
+            </li>
+            <li class="bai-giang">
+                <a data-chuc-nang="hien-thi" data-value="baigiang">
+                    <i></i>
+                    <span>Bài giảng</span>
+                </a>
+            </li>
+            <li class="bai-tap">
+                <a data-chuc-nang="hien-thi" data-value="baitap">
+                    <i></i>
+                    <span>Bài tập</span>
+                </a>
+            </li>
+            <li class="tai-lieu">
+                <a data-chuc-nang="hien-thi" data-value="tailieu">
+                    <i></i>
+                    <span>Tài liệu</span>
+                </a>
+            </li>
+            <li class="dien-dan">
+                <a data-chuc-nang="hien-thi" data-value="diendan">
+                    <i></i>
+                    <span>Diễn đàn</span>
+                </a>
+            </li>
+        </ul>
+    </section>
+    <section id="khung_hien_thi"></section>   
 </section>
